# api-informatics-frs-helper

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  fly.toml
.github/workflows/: check.yml  ci.yml  deploy.yml  release.yml
assets/: openapi.json
src/: db.rs  lib.rs  main.rs  middleware.rs  route.rs
src/model/: class_model.rs  course_model.rs  lecturer_model.rs  mod.rs  response_model.rs
src/models/: class.rs  course.rs  lecturer.rs  mod.rs
src/repositories/: class.rs  course.rs  lecturer.rs
src/repository/: class_repository.rs  course_repository.rs  lecturer_repository.rs  mod.rs
src/routes/: class.rs  course.rs  lecturer.rs
src/services/: class.rs  class_service.rs  course.rs  course_service.rs  home.rs  home_service.rs  lecturer.rs  lecturer_service.rs  mod.rs  swagger.rs  swagger_service.rs
templates/: home.html  swagger.html
