[package]
name = "api-informatics-frs-helper"
version = "1.1.0"
edition = "2021"
description = "A RESTful API designed to gather more information related to Informatics FRS Helper. It provides several endpoints to access data related to courses, lecturers, and classes."
authors = ["Mohamad Kholid Bughowi <kholidbughowi@gmail.com>"]
homepage = "https://api-informatics-frs-helper.fly.dev"
repository = "https://github.com/albugowy15/api-informatics-frs-helper"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
askama = "0.12.1"
axum = { version = "0.7.5", features = ["tracing"] }
axum-extra = "0.9.3"
dotenvy = "0.15.7"
hyper = "1.3.1"
rustls = "0.23.4"
serde = "1.0.198"
serde_json = { version = "1.0.116", features = ["preserve_order"] }
sqlx = { version = "0.7.4", features = [
  "runtime-tokio",
  "tls-rustls",
  "mysql",
] }
tokio = { version = "1.37.0", features = [
  "rt-multi-thread",
  "macros",
  "net",
  "signal",
] }
tower = { version = "0.4.13", features = ["buffer", "limit", "util"] }
tower-http = { version = "0.5.2", features = [
  "fs",
  "trace",
  "timeout",
  "cors",
  "compression-gzip",
] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
